// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crud operations Create Operation 1`] = `
"{
  \\"name\\": \\"create-my-resource-input\\",
  \\"comments\\": [],
  \\"persistant\\": true,
  \\"attributes\\": [
    {
      \\"name\\": \\"pk\\",
      \\"shortName\\": \\"pk\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"HIDDEN\\",
      \\"comments\\": [
        \\"Partition Key for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"Composition\\"
    },
    {
      \\"name\\": \\"sk\\",
      \\"shortName\\": \\"sk\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"HIDDEN\\",
      \\"comments\\": [
        \\"Sort Key for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"Composition\\"
    },
    {
      \\"name\\": \\"lookup\\",
      \\"shortName\\": \\"idx\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"HIDDEN\\",
      \\"comments\\": [
        \\"Lookup value for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"Composition\\"
    },
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"Guid\\"
    },
    {
      \\"name\\": \\"type\\",
      \\"shortName\\": \\"t\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Type of record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"Type\\"
    },
    {
      \\"name\\": \\"version\\",
      \\"shortName\\": \\"v\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Version for record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"VersionDateTimeStamp\\"
    },
    {
      \\"name\\": \\"created-timestamp\\",
      \\"shortName\\": \\"ct\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was created.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"CurrentDateTimeStamp\\"
    },
    {
      \\"name\\": \\"modified-timestamp\\",
      \\"shortName\\": \\"mt\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"The timestamp representing when this record was last modified.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"CurrentDateTimeStamp\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"USER_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"USER_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Create Operation 2`] = `
"{
  \\"name\\": \\"my-resource\\",
  \\"shortName\\": \\"my-resource\\",
  \\"type\\": \\"my-resource\\",
  \\"management\\": \\"SYSTEM_MANAGED\\",
  \\"visibility\\": \\"USER_VISIBLE\\",
  \\"comments\\": [],
  \\"required\\": true,
  \\"generator\\": \\"None\\"
}"
`;

exports[`crud operations Delete Operation 1`] = `
"{
  \\"name\\": \\"get-my-resource-input\\",
  \\"comments\\": [],
  \\"persistant\\": true,
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Delete Operation 2`] = `
"{
  \\"name\\": \\"my-resource\\",
  \\"shortName\\": \\"my-resource\\",
  \\"type\\": \\"my-resource\\",
  \\"management\\": \\"SYSTEM_MANAGED\\",
  \\"visibility\\": \\"USER_VISIBLE\\",
  \\"comments\\": [],
  \\"required\\": true,
  \\"generator\\": \\"None\\"
}"
`;

exports[`crud operations Read Operation 1`] = `
"{
  \\"name\\": \\"get-my-resource-input\\",
  \\"comments\\": [],
  \\"persistant\\": true,
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Read Operation 2`] = `
"{
  \\"name\\": \\"my-resource\\",
  \\"shortName\\": \\"my-resource\\",
  \\"type\\": \\"my-resource\\",
  \\"management\\": \\"SYSTEM_MANAGED\\",
  \\"visibility\\": \\"USER_VISIBLE\\",
  \\"comments\\": [],
  \\"required\\": true,
  \\"generator\\": \\"None\\"
}"
`;

exports[`crud operations Update Operation 1`] = `
"{
  \\"name\\": \\"get-my-resource-input\\",
  \\"comments\\": [],
  \\"persistant\\": true,
  \\"attributes\\": [
    {
      \\"name\\": \\"id\\",
      \\"shortName\\": \\"id\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"SYSTEM_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [
        \\"Identifier for this record.\\"
      ],
      \\"required\\": true,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"required-name\\",
      \\"shortName\\": \\"required-name\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"USER_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    },
    {
      \\"name\\": \\"optional-name\\",
      \\"shortName\\": \\"optional-name\\",
      \\"type\\": \\"String\\",
      \\"management\\": \\"USER_MANAGED\\",
      \\"visibility\\": \\"USER_VISIBLE\\",
      \\"comments\\": [],
      \\"required\\": false,
      \\"generator\\": \\"None\\"
    }
  ]
}"
`;

exports[`crud operations Update Operation 2`] = `
"{
  \\"name\\": \\"my-resource\\",
  \\"shortName\\": \\"my-resource\\",
  \\"type\\": \\"my-resource\\",
  \\"management\\": \\"SYSTEM_MANAGED\\",
  \\"visibility\\": \\"USER_VISIBLE\\",
  \\"comments\\": [],
  \\"required\\": true,
  \\"generator\\": \\"None\\"
}"
`;
